Secure extension points and add principal settings
